# 20882-project

./: .gitignore  README.md  pyproject.toml
config/: cifar10.json  mnist.json
results/: mnist.json
src/: dataset.py  feature_visualization.py  functions.py  models.py  plot_results.py  training.py  training_cifar.py  training_mnist.py  tuning.py  tuning_cifar.py  tuning_mnist.py  utils.py
src/config/: cifar.json  mnist.json
